kubernetes/apps/keyb/prod/frontend/deploymentPatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keyb-frontend
spec:
  selector:
    matchLabels:
      app: keyb-frontend-prod
  template:
    metadata:
      labels:
        app: keyb-frontend-prod
    spec:
      containers:
      - name: keyb-frontend
        image: ghcr.io/keybio/frontend/frontend:master
        ports:
        - name: http
          containerPort: 4010
