kubernetes/apps/keyb/prod/frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keyb-frontend-service
spec:
  selector:
    app: keyb-frontend-prod
  type: ClusterIP
  ports:
    - name: http
      port: 4010
      targetPort: 4010
