kubernetes/apps/keyb/prod/frontend/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: keyb
  name: keyb-frontend
spec:
  ingressClassName: internal
  rules:
  - host: keyb-prod.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keyb-frontend-prod
            port:
              name: http
